Remove stylings made for recipe pages
Another sheet called recipe.css is created to handle stylings meant for
the recipe pages

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: olive;
 }
+h1 {
+    color:black;
+}
+img {
+    height: auto;
+    width: 20px;
+}
